fix Learning Objective arrows too big #2029

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -5430,7 +5430,7 @@ div.book div > div.section > div.section.learning-objectives .listitem {
   padding-left: 0;
 }
 div.book div > div.section > div.section.learning-objectives .listitem::marker {
-  width: 5px;
+  width: 4.5px;
   content: url("ccap-astronomy/learning-objectives.svg");
 }
 div.book div > div.section > div.section.learning-objectives .listitem p {
