--- a/css/refactor/astronomy-slots.less
+++ b/css/refactor/astronomy-slots.less
@@ -244,7 +244,7 @@
             padding-left: 0;
           }
           .marker() {
-            width: 5px;
+            width: 4.5px;
             content: url("ccap-astronomy/learning-objectives.svg");
           }
         }
